--- a/roles/emacs/templates/emacsd.service.j2
+++ b/roles/emacs/templates/emacsd.service.j2
@@ -5,7 +5,7 @@ Documentation=man:emacs(1) info:Emacs
 
 [Service]
 Type=forking
-ExecStart=/usr/bin/emacs --daemon
+ExecStart=/usr/bin/emacs --daemon {{ emacs.starting_args }}
 ExecStop=/usr/bin/emacsclient --eval "(progn (setq kill-emacs-hook nil) (kill-emacs))"
 Restart=on-failure
 Environment=DISPLAY=:%i
